--- a/views/user_student_profile.ejs
+++ b/views/user_student_profile.ejs
@@ -456,12 +456,12 @@
                         <% if (v[0].type_can_borrow == 'o') { %>
                           <b><input type="checkbox" checked readonly>
                             &nbsp; <%= v[0].type_name %>
-                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                           </b><br>
                         <% } else { %>
                           <b><input type="checkbox" checked readonly>
                             &nbsp; <%= v[0].equip_name %>
-                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                           </b><br>
                         <% } %>
                       <% }) %>
@@ -656,12 +656,12 @@
                         <% if (v[0].type_can_borrow == 'o') { %>
                         <b><input type="checkbox" checked readonly>
                           &nbsp; <%= v[0].type_name %>
-                          (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                          (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                         </b><br>
                         <% } else { %>
                         <b><input type="checkbox" checked readonly>
                           &nbsp; <%= v[0].equip_name %>
-                          (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                          (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                         </b><br>
                         <% } %>
                       <% }) %>
@@ -856,12 +856,12 @@
                         <% if (v[0].type_can_borrow == 'o') { %>
                           <b><input type="checkbox" checked readonly>
                             &nbsp; <%= v[0].type_name %>
-                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                           </b><br>
                         <% } else { %>
                           <b><input type="checkbox" checked readonly>
                             &nbsp; <%= v[0].equip_name %>
-                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                           </b><br>
                         <% } %>
                       <% }) %>
@@ -1040,12 +1040,12 @@
                         <% if (v[0].type_can_borrow == 'o') { %>
                           <b><input type="checkbox" checked readonly>
                             &nbsp; <%= v[0].type_name %>
-                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                           </b><br>
                         <% } else { %>
                           <b><input type="checkbox" checked readonly>
                             &nbsp; <%= v[0].equip_name %>
-                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= borrowNow[i].bor_amount %>" readonly>)
+                            (<input style="width: 10%; text-align: center; border-color: transparent;" value="<%= v[0].bor_amount %>" readonly>)
                           </b><br>
                         <% } %>
                       <% }) %>
